--- a/public/css/buildcert.css
+++ b/public/css/buildcert.css
@@ -40,11 +40,11 @@ and open the template in the editor.
       background-color: #f6f6f6;
   }
   .logo-small {
-      color: #2196f3;
+      color: #3f51b5;
       font-size: 50px;
   }
   .logo {
-      color: #2196f3;
+      color: #3f51b5;
       font-size: 200px;
   }
   .thumbnail {
@@ -59,13 +59,13 @@ and open the template in the editor.
   }
   .carousel-control.right, .carousel-control.left {
       background-image: none;
-      color: #2196f3;
+      color: #3f51b5;
   }
   .carousel-indicators li {
-      border-color: #2196f3;
+      border-color: #3f51b5;
   }
   .carousel-indicators li.active {
-      background-color: #2196f3;
+      background-color: #3f51b5;
   }
   .item h4 {
       font-size: 19px;
@@ -78,7 +78,7 @@ and open the template in the editor.
       font-style: normal;
   }
   .panel {
-      border: 1px solid #2196f3;
+      border: 1px solid #3f51b5;
       border-radius:0 !important;
       transition: box-shadow 0.5s;
   }
@@ -86,13 +86,13 @@ and open the template in the editor.
       box-shadow: 5px 0px 40px rgba(0,0,0, .2);
   }
   .panel-footer .btn:hover {
-      border: 1px solid #2196f3;
+      border: 1px solid #3f51b5;
       background-color: #fff !important;
-      color: #2196f3;
+      color: #3f51b5;
   }
   .panel-heading {
       color: #fff !important;
-      background-color: #2196f3 !important;
+      background-color: #3f51b5 !important;
       padding: 5px;
       border-bottom: 1px solid transparent;
       border-top-left-radius: 0px;
@@ -102,7 +102,7 @@ and open the template in the editor.
   }
     .panel-heading1 {
       color: #fff !important;
-      background-color: #2196f3 !important;
+      background-color: #3f51b5 !important;
       padding: 5px;
       border-bottom: 1px solid transparent;
       border-top-left-radius: 0px;
@@ -112,7 +112,7 @@ and open the template in the editor.
   }
    .panel-heading2 {
       color: #fff !important;
-      background-color: #2196f3 !important;
+      background-color: #3f51b5 !important;
       padding: 5px;
       border-bottom: 1px solid transparent;
       border-top-left-radius: 0px;
@@ -132,12 +132,12 @@ and open the template in the editor.
   }
   .panel-footer .btn {
       margin: 15px 0;
-      background-color: #2196f3;
+      background-color: #3f51b5;
       color: #fff;
   }
   .navbar {
       margin-bottom: 0;
-      background-color: #2196f3;
+      background-color: #3f51b5;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -150,7 +150,7 @@ and open the template in the editor.
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #2196f3 !important;
+      color: #3f51b5 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
@@ -160,7 +160,7 @@ and open the template in the editor.
   footer .glyphicon {
       font-size: 20px;
       margin-bottom: 20px;
-      color: #2196f3;
+      color: #3f51b5;
   }
   .slideanim {visibility:hidden;}
   .slide {
@@ -259,13 +259,13 @@ and open the template in the editor.
     opacity: 1;
 }
 .btn:hover {
-      border: 1px solid #2196f3 !important;
+      border: 1px solid #3f51b5 !important;
       background-color: #fff !important;
-      color: #2196f3 !important;
+      color: #3f51b5 !important;
   }
   .btn {
       margin: 15px 0 !important;
-      border: 1px solid #2196f3 !important;
-      background-color: #2196f3 !important;
+      border: 1px solid #3f51b5 !important;
+      background-color: #3f51b5 !important;
       color: #fff !important;
   }
